# Olio-ohjelmointi

./: CMakeLists.txt  README.md  main.cpp
harjoitus2/: game.cpp  game.h  main.cpp
tehtava1/: main.cpp
tehtava3/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
tehtava4/: asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
tehtava5/: main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
tehtava6/: main.cpp  student.cpp  student.h
tehtava7/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tehtava7piste1/: mainwindow.cpp  mainwindow.h  mainwindow.ui
tehtava8/: mainwindow.cpp  mainwindow.h  mainwindow.ui
